# gol

./: .gitignore  .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
gol/: CMakeLists.txt  gol.cpp  gol.h
